[package]
name = "nanopyrs"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite of the Python nanopy library"
repository = "https://github.com/expiredhotdog/nanopyrs"
readme = "README.md"
keywords = ["cryptocurrency", "nanocurrency", "nano"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.1" }
blake2 = "0.10.6"
bitvec = "0.20.4"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
auto_ops = "0.3.0"

thiserror = { version = "1.0.49", optional = true }
hex = { version = "0.4.3", optional = true }
reqwest = { version = "0.11.22", features = ["json"], optional = true }
serde_json = { version = "1.0.107", optional = true }

[features]
default = ["rpc"]
rpc = ["dep:thiserror", "dep:hex", "dep:reqwest", "dep:serde_json"]