[package]
name = "nanopyrs"
version = "0.3.1"
edition = "2021"
description = "Rust rewrite of the Python nanopy library"
license = "MIT"
homepage = "https://github.com/expiredhotdog/nanopyrs"
repository = "https://github.com/expiredhotdog/nanopyrs"
readme = "README.md"
keywords = ["cryptocurrency", "nanocurrency", "nano"]

[dependencies]
curve25519-dalek = { version = "4.1.1" }
blake2 = "0.10.6"
bitvec = { version = "0.20.4", default-features = false, features = ["alloc"] }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
auto_ops = "0.3.0"

thiserror = { version = "1.0.49", optional = true }
hex = { version = "0.4.3", optional = true }
reqwest = { version = "0.11.22", features = ["json"], optional = true }
serde_json = { version = "1.0.107", optional = true }

serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[features]
default = []
all = ["stealth", "rpc", "serde"]
stealth = []
rpc = ["dep:thiserror", "dep:hex", "dep:reqwest", "dep:serde_json"]
serde = ["dep:serde", "dep:serde_arrays", "curve25519-dalek/serde"]

[package.metadata.docs.rs]
all-features = true